--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.Dubstepzedd</groupId>
     <artifactId>SimpleCommandParser</artifactId>
-    <version>1.0.0</version>
+    <version>v.1.0.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
