--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.liamand</groupId>
-    <artifactId>SimpleCommandParser</artifactId>
+    <artifactId>simplecommandparser</artifactId>
     <version>v.1.0.0</version>
 
 
@@ -16,18 +16,24 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
-
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Dubstepzedd Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Dubstepzedd/SimpleCommandParser</url>
+        </repository>
+    </distributionManagement>
 
 </project>
