--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.liamand</groupId>
-    <artifactId>simplecommandparser</artifactId>
-    <version>v.1.0.0</version>
+  <groupId>com.dubstepzedd.SimpleCommandParser</groupId>
+  <artifactId>SimpleCommandParser</artifactId>
+  <version>1.0</version>
+  <packaging>jar</packaging>
 
+  <name>SimpleCommandParser</name>
+  <description>A CommandParser made in Java.</description>
+  <url>https://github.com/Dubstepzedd/SimpleCommandParser</url>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
 
-    <properties>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
-    </properties>
+  <developers>
+    <developer>
+      <name>Liam Andersson</name>
+      <email>liam.andersson2002@gmail.com</email>
+      <organization>Sonatype</organization>
+      <organizationUrl>http://www.sonatype.com</organizationUrl>
+    </developer>
+  </developers>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub Dubstepzedd Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Dubstepzedd/SimpleCommandParser</url>
-        </repository>
-    </distributionManagement>
+  <scm>
+    <connection>scm:git:git://github.com/Dubstepzedd/SimpleCommandParser.git</connection>
+    <developerConnection>scm:git:git://github.com/Dubstepzedd/SimpleCommandParser.git</developerConnection>
+    <url>https://github.com/Dubstepzedd/SimpleCommandParser/tree/main</url>
+   </scm>
 
 </project>
